# advent-of-code-2021

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
days/include/: day01.hh  day02.hh  day03.hh  day04.hh  day05.hh  day06.hh  day07.hh  day08.hh  day09.hh  day10.hh  day11.hh  day12.hh  day13.hh  day14.hh  day15.hh  day16.hh  day17.hh  day18.hh  day19.hh  day20.hh  day21.hh  day22.hh  day23.hh  day24.hh  day25.hh
days/src/: day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day20.cc  day21.cc  day22.cc  day23.cc  day24.cc  day25.cc
devtools/: activate.sh
include/: advent.hh  dataset.hh  parser.hh  puzzle.hh  utils.hh
libs/: cxxopts.hh  itertools.hh  point.hh  pprint.hh
src/: advent.cc  advent.ixx  args.ixx  assets.ixx  dataset.cc  dataset.ixx  main.cc  parser.cc  parser.ixx  utilities.ixx  utils.cc
src/advent/: advent.hh  advent.ixx  day01.cc  day01.ixx  day02.cc  day02.ixx  day03.cc  day03.ixx  day04.cc  day04.ixx  day05.cc  day05.ixx  day06.cc  day06.ixx  day07.cc  day07.ixx  day08.cc  day08.ixx  day09.cc  day09.ixx  day10.cc  day10.ixx  day11.cc  day11.ixx  day12.cc  day12.ixx  day13.cc  day13.ixx  day14.cc  day14.ixx  day15.cc  day15.ixx  day16.cc  day16.ixx  day17.cc  day17.ixx  day18.cc  day18.ixx  day19.cc  day19.ixx  (+13 more)
src/aoc/: args.hh  assets.hh  main.cc
src/days/: day01.ixx  day02.ixx  day03.ixx  day04.ixx  day05.ixx  day06.ixx  day07.ixx  day08.ixx  day09.ixx  day10.ixx  day11.ixx  day12.ixx  day13.ixx  day14.ixx  day15.ixx  day16.ixx  day17.ixx  day18.ixx  day19.ixx  day20.ixx  day21.ixx  day22.ixx  day23.ixx  day24.ixx  day25.ixx  puzzle.hh
src/utilities/: utl.cc  utl.hh
